tests/rosetta/out/Fortran/100-doors-3.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:38Z
program 100_doors_3
  implicit none
  character(len=100) :: result
  integer :: i
    integer :: j
  result = ''
  do i = 1, 101
    j = 1
    do while (((j * j) < i))
      j = (j + 1)
    end do
    if (((j * j) == i)) then
      result = trim(result) // 'O'
    else
      result = trim(result) // '-'
    end if
  end do
  print *, result
end program 100_doors_3
